add models, initial view
This adds the active record model classes, a controller, a view backed
by the controller, and configuration to make that view the root route.
It also adds a form of header to the layout for navigation.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+  font-family: sans-serif
+}
+
+div#top-navigation { height: 5%; font-size: 24px; border-bottom: 1px solid #CCCCCC }
+div#top-navigation ul li { list-style: none; display: inline-block; padding-right: 10% }
