--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+    <div id="top-navigation">
+      <ul>
+        <li>
+          <a href="/">My Positions</a>
+        </li>
+      </ul>
+    </div>
+
     <%= yield %>
   </body>
 </html>
