--- a/app/views/job_positions/index.html.erb
+++ b/app/views/job_positions/index.html.erb
@@ -1,47 +1,6 @@
-<div class="positions_heading">
-  <h1>Job Position Timelines</h1>
-  <p>This page should be rewritten to use React in the near future</p>
-</div>
-
-<button class="add_position">Add Position</button>
-<% if @job_positions.blank? %>
-  <h3>No Positions are present with any events. Add one!
-<% else %>
-  <table>
-    <thead>
-      <th>Company</th>
-      <th>Position</th>
-      <th>Interest Level</th>
-    </thead>
-    <tbody>
-      <% @job_positions.each do |position| %>
-        <tr class="position_row">
-          <td class="position_company">
-            <% if position.company.website_url.blank? %>
-              <%= position.company.name %>
-            <% else %>
-              <a href="<%= position.company.website_url%>", target="_blank"><%= position.company.name %></a>
-            <% end %>
-          </td>
-
-          <td class="position_title">
-            <% title_string = position.title + (position.domain.blank? ? '' : " (#{position.domain})") %>
-            <% if position.job_link.blank? %>
-              <%= title_string %>
-            <% else %>
-              <a href="<%= position.job_link %>" target="_blank"><%= title_string %></a>
-            <% end %>
-          </td>
-
-          <td class="position_interest">
-            <% if position.interest_level.blank? %>
-              unset
-            <% else %>
-              <%= position.interest_level.to_i %>/5
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-<% end %>
+<%
+  job_positions_map = @job_positions.map do |p|
+    p.attributes.merge({company: p.company.attributes})
+  end
+%>
+<%= react_component("JobPositionsDashboard", {positions: job_positions_map}) %>
