refactor JobPositionsDashboard component, data
This moves the logic for creating the dashboard's table rows into a
separate function, adds the check for no positions outside of the JS
code, and massages the data for consumption by the component in the
controller instead of embedding the logic in the view.

--- a/app/views/job_positions/index.html.erb
+++ b/app/views/job_positions/index.html.erb
@@ -1,6 +1,5 @@
-<%
-  job_positions_map = @job_positions.map do |p|
-    p.attributes.merge({company: p.company.attributes})
-  end
-%>
-<%= react_component("JobPositionsDashboard", {positions: job_positions_map}) %>
+<% if @job_positions.blank? %>
+  <h3>No Positions are present with any events. Add one!</h3>
+<% end %>
+
+<%= react_component("JobPositionsDashboard", {positions: @job_positions}) %>
