convert to using Typescript with React
In addition to using React, this adds yarn and configuration (via a gem)
to use typescript instead of plain Javascript. Javascript to be compiled
by esbuild into an assets/build folder. This currently requires running
'yarn build' every time JS is changed.

--- a/app/views/job_positions/index.html.erb
+++ b/app/views/job_positions/index.html.erb
@@ -2,4 +2,4 @@
   <h3>No Positions are present with any events. Add one!</h3>
 <% end %>
 
-<%= react_component("JobPositionsDashboard", {positions: @job_positions}) %>
+<div id="root" data-job-positions="<%= @job_positions.to_json %>"></div>
